# CoordinateGridRendering

./: .gitignore  CMakeLists.txt
shaders/: axis_marker.frag  axis_marker.vert  fullscreen_quad.vert  fullscreen_triangle.frag  fullscreen_triangle.vert  grid.frag  object.frag  object.vert
shaders/common/: ViewUniformBlock.glsl
src/: Application.cpp  Application.h  AxisMarkerRenderer.cpp  AxisMarkerRenderer.h  CameraViewMode.cpp  CameraViewMode.h  DemoSceneRenderer.cpp  DemoSceneRenderer.h  GridPresets.cpp  GridPresets.h  GridRenderer.cpp  GridRenderer.h  OrbitCamera.cpp  OrbitCamera.h  ShaderProgram.cpp  ShaderProgram.h  ViewUniformBuffer.cpp  ViewUniformBuffer.h  main.cpp
